# softcut-lib

./: .gitignore  .gitmodules  CMakeLists.txt  notes.md  readme-contributing.md  readme-macos.md  readme.md  wscript
clients/softcut-jack-osc/: CMakeLists.txt
clients/softcut-jack-osc/assets/: ducking.scd
clients/softcut-jack-osc/src/: BufDiskWorker.cpp  Bus.h  Commands.h  OscInterface.cpp  SoftcutClient.cpp  SoftcutClient.h  Window.h  main.cpp
clients/softcut-nrt-test/: CMakeLists.txt
clients/softcut-nrt-test/analysis/: __main__.py  main.py  plots.py  rate-sign-change.py  requirements.txt  scratch.py
clients/softcut-nrt-test/src/: Test.h  TestLoopInPlace.h  TestRateIncreasing.h  TestRateSignChange.h  main.cpp  test-fade-curves.cpp
clients/softcut_jack_osc/: CMakeLists.txt
clients/softcut_jack_osc/src/: BufDiskWorker.cpp  BufDiskWorker.h  Bus.h  Commands.cpp  Commands.h  JackClient.cpp  JackClient.h  OscInterface.cpp  OscInterface.h  OscServer.cpp  OscServer.h  Poll.h  SoftCutClient.cpp  SoftCutClient.h  SoftcutClient.cpp  SoftcutClient.h  Utilities.h  Window.cpp  main.cpp
clients/softcut_jack_osc/tests/: pulsefile.scd
softcut/: CMakeLists.txt
softcut-lib/: CMakeLists.txt  wscript
softcut-lib/include/: Softcut.h
softcut-lib/include/softcut/: Assert.h  Data.h  DebugLog.h  FadeCurves.h  Fades.h  ReadWriteHead.h  Resampler.h  SoftClip.h  Softcut.h  SubHead.h  Svf.h  Tables.h  TestBuffers.h  Types.h  Utilities.h  Voice.h
softcut-lib/src/: DebugLog.cpp  FadeCurves.cpp  FadeCurves.h  ReadWriteHead.cpp  Softcut.cpp  SoftcutHead.cpp  SoftcutHead.h  SoftcutVoice.cpp  SoftcutVoice.h  SubHead.cpp  SubHead.h  Svf.cpp  Tables.cpp  Types.h  Voice.cpp
softcut/include/softcut/: Interpolate.h  ReadWriteHead.h  SoftClip.h  Softcut.h  SubHead.h  Voice.h
softcut/src/: FadeCurves.cpp  ReadWriteHead.cpp  Softcut.cpp  SubHead.cpp  Svf.cpp  TestBuffers.cpp  Voice.cpp
